--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,13 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+@layer base {
+  a {
+    text-decoration: none;
+    text-decoration-skip-ink: auto;
+    color: inherit;
+    position: relative;
+  }
+}
 
 @theme {
   --color-dark-navy: #020c1b;
@@ -26,4 +35,28 @@
   --text-heading: 32px;
   --ease-easing: cubic-bezier(0.645, 0.045, 0.355, 1);
   --transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+html {
+  width: 100%;
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-dark-slate) var(--color-navy);
+}
+
+::selection {
+  background-color: var(--color-lightest-navy);
+  color: var(--color-lightest-slate);
+}
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: var(--color-navy);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-dark-slate);
+  border: 3px solid var(--color-navy);
+  border-radius: 10px;
 }
