--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,20 @@ html {
   scroll-behavior: smooth;
   scrollbar-width: thin;
   scrollbar-color: var(--color-dark-slate) var(--color-navy);
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  min-height: 100vh;
+  background-color: var(--color-navy);
+  color: var(--color-slate);
+  font-size: var(--text-xl);
+}
+
+#root {
+  min-height: 100vh;
+  display: grid;
 }
 
 ::selection {
