changes in global.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,17 @@
 @import 'tailwindcss';
 
 @layer base {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0 0 10px 0;
+    font-weight: 600;
+    color: var(--color-lightest-slate);
+    line-height: 1.1;
+  }
   a {
     text-decoration: none;
     text-decoration-skip-ink: auto;
@@ -33,6 +44,11 @@
   --text-xl: 20px;
   --text-xxl: 22px;
   --text-heading: 32px;
+  --text-big-heading: clamp(40px, 8vw, 80px);
+  --text-medium-heading: clamp(40px, 8vw, 60px);
+  --text-number-heading: clamp(26px, 5vw, var(--text-heading));
+  --leading-*: initial;
+  --leading-1.3: 1.3;
   --ease-easing: cubic-bezier(0.645, 0.045, 0.355, 1);
   --transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
@@ -51,6 +67,7 @@ body {
   background-color: var(--color-navy);
   color: var(--color-slate);
   font-size: var(--text-xl);
+  line-height: var(--leading-1\.3);
 }
 
 #root {
