--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @layer base {
   h1,
@@ -47,9 +47,10 @@
   --text-heading: 32px;
   --text-big-heading: clamp(40px, 8vw, 80px);
   --text-medium-heading: clamp(40px, 8vw, 60px);
+  --text-h1-heading: clamp(var(--text-sm), 5vw, var(--text-md));
   --text-number-heading: clamp(26px, 5vw, var(--text-heading));
   --leading-*: initial;
-  --leading-1.3: 1.3;
+  --leading-1.1: 1.1;
   --breakpoint-*: initial;
   --breakpoint-mobileS: 330px;
   --breakpoint-mobileM: 400px;
@@ -77,8 +78,8 @@ body {
   min-height: 100vh;
   background-color: var(--color-navy);
   color: var(--color-slate);
-  font-size: var(--text-xl);
-  line-height: var(--leading-1\.3);
+  font-size: var(--text-lg);
+  line-height: var(--leading-1\.1);
   font-family: var(--font-sans);
 }
 
@@ -109,7 +110,7 @@ body {
 
 .counter-inc::before {
   counter-increment: linkitem;
-  content: '0' counter(linkitem) '. ';
+  content: "0" counter(linkitem) ". ";
   font-size: var(--text-xxs);
   color: var(--color-green);
   font-weight: 400;
@@ -121,7 +122,7 @@ body {
 
 .counter-inc-section-header::before {
   counter-increment: section;
-  content: '0' counter(section) '. ';
+  content: "0" counter(section) ". ";
   font-family: var(--font-mono);
   font-weight: 400;
   color: var(--color-green);
@@ -132,7 +133,7 @@ body {
 }
 
 .counter-inc-section-header::after {
-  content: '';
+  content: "";
   background-color: var(--color-lightest-navy);
   margin-left: 20px;
   position: relative;
@@ -140,4 +141,47 @@ body {
   width: 300px;
   height: 1px;
   display: block;
+}
+
+.about-image-wrapper {
+  box-shadow: 0 10px 30px -15px rgba(2, 12, 27, 0.7);
+  display: block;
+  position: relative;
+  width: 100%;
+  border-radius: 4px;
+  background-color: var(--color-green);
+}
+.about-image-wrapper::before,
+.about-image-wrapper::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+}
+
+.about-image-wrapper::before {
+  top: 0px;
+  left: 0px;
+  background-color: var(--color-navy);
+  mix-blend-mode: screen;
+}
+.about-image-wrapper::after {
+  border: 2px solid var(--color-green);
+  top: 14px;
+  left: 14px;
+  z-index: -1;
+}
+
+.about-image-wrapper .img {
+  position: relative;
+  border-radius: 4px;
+  mix-blend-mode: multiply;
+  filter: grayscale(100%) contrast(1);
+}
+
+.about-image-wrapper:hover .img {
+  filter: none;
+  mix-blend-mode: normal;
 }
