--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,6 +63,7 @@
   --breakpoint-desktopM: 1280px;
   --breakpoint-desktopL: 1536px;
   --ease-easing: cubic-bezier(0.645, 0.045, 0.355, 1);
+  --shadow-custom1: 3px 3px 0 0 var(--color-green);
   /* --transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1); */
 }
 
